2004-08-11  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/gnucash.desktop.in: make the desktop HIG compliant.
	  Fixes #145545

2004-07-20  Derek Atkins <derek@ihtfp.com>

	* src/engine/Scrub.c
	* src/engine/Scrub2.c
	* src/engine/gnc-numeric.c
	* src/engine/gnc-pricedb.c
	* src/engine/kvp-util.c
	* src/engine/qofid.c
	* src/engine/qofmath128.c
	* src/engine/qofquery.c
	* src/engine/qofsession.c
	* src/engine/test/test-numeric.c
	  Priit Laes' patch for C90 compliance.

2004-07-13  David Montenegro  <sunrise2000@comcast.net>

        * src/report/standard-reports/general-ledger.scm:
	  src/report/standard-reports/standard-reports.scm:
          src/report/standard-reports/Makefile.am:
          Added General Ledger report, a Transaction Report
          with a pre-set set of options.

	* src/report/standard-reports/transaction.scm:
          FIXME - All accounts now selected by default, avoids
          confusing error message. Error message also clarified.
          Fixed "Totals" option so that it works.

        * src/report/standard-reports/balance-sheet.scm:
        * src/report/standard-reports/equity-statement.scm:
        * src/report/standard-reports/trial-balance.scm:
        Updated comments
	* Fixes #144268

        * src/report/standard-reports/income-statement.scm:
          src/report/standard-reports/pnl.scm:
          src/report/standard-reports/standard-reports.scm:
          src/report/standard-reports/Makefile.am:
          Rewrote pnl.scm, renamed it to income-statement.scm.
          Can now create a meaningful statement post-closing.

        * src/report/report-system/html-acct-table.scm:
          Updated to include ability to "see through" closing
          and/or adjusting entries.
	* Fixes #105330.

        * src/report/standard-reports/general-journal.scm:
          src/report/standard-reports/standard-reports.scm:
          src/report/standard-reports/Makefile.am:
          Added General Journal report, a Register Report